--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,16 @@ jobs:
           mkdir -p $GITHUB_WORKSPACE/builds
           cp **/build/*.cs3 $GITHUB_WORKSPACE/builds
           cp build/plugins.json $GITHUB_WORKSPACE/builds
-          cp build/plugins.json $GITHUB_WORKSPACE/builds/repo.json
+          cat > $GITHUB_WORKSPACE/builds/repo.json <<EOF
+          {
+            "name": "Cartoony Repo",
+            "description": "Arabic Cartoony provider",
+            "manifestVersion": 1,
+            "pluginLists": [
+              "https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/builds/plugins.json"
+            ]
+          }
+          EOF
 
       - name: Deploy to builds branch
         uses: peaceiris/actions-gh-pages@v4
