--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,13 +40,15 @@ jobs:
           mkdir -p $GITHUB_WORKSPACE/builds
           cp **/build/*.cs3 $GITHUB_WORKSPACE/builds
           cp build/plugins.json $GITHUB_WORKSPACE/builds
+          SHORT_SHA=${GITHUB_SHA:0:8}
+          cp build/plugins.json $GITHUB_WORKSPACE/builds/plugins-${SHORT_SHA}.json
           cat > $GITHUB_WORKSPACE/builds/repo.json <<EOF
           {
             "name": "Cartoony Repo",
             "description": "Arabic Cartoony provider",
             "manifestVersion": 1,
             "pluginLists": [
-              "https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/builds/plugins.json"
+              "https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/builds/plugins-${SHORT_SHA}.json"
             ]
           }
           EOF
